fix:add to usertype and password
